tests/NormalTests/paczka1/fuzzy1/84894432.err
Error in line 2: HQGjwIB S448 71,5
Error in line 19: A425 A425 133,27
Error in line 12: HQGjwIB A425 70,6
Error in line 16: A425 A425 30,6
Error in line 26: HNym84Ez S910 40,3
Error in line 28: HNym84Ez S448 87,1
Error in line 27: A425 A639 72,4
Error in line 30: HNym84Ez A639 8,7
Error in line 24: Mz9hYBTK1 S448 199,2
Error in line 21: HQGjwIB S448 1,8
